making the structure of the porfolio page

--- a/project/index.html
+++ b/project/index.html
@@ -3,10 +3,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/main.css">
     <title>Santosh Lama</title>
 </head>
 <body>
-    <h5>hello</h5>
+   <main id="whole_wrapper">
+        <header>
+            <div class="ham-btn">
+                    <div class="ham-btn-line"></div>
+                    <div class="ham-btn-line"></div>
+                    <div class="ham-btn-line"></div>
+            </div>
+            <nav class="navbar hide">
+                <ul>
+                    <li class="sl-nav-item">
+                        <a href="#" class="sl-nav-link">My profile</a>
+                    </li>
+                    <li class="sl-nav-item">
+                        <a href="#" class="sl-nav-link">My work</a>
+                    </li>
+                    <li class="sl-nav-item">
+                        <a href="#" class="sl-nav-link">Skills</a>
+                    </li>
+                    <li class="sl-nav-item">
+                        <a href="#" class="sl-nav-link">contacts</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section id="sl-profile">
+            <h2 class="sl-name">Santosh Lama</h2>
+            <h3 class="sl-work">Web Developer, Font End Developer, Laravel Developer, Programmer</h2>
+            <h3>Check Out My Github Accounts</h3>
+            <div class="sl-icons">
+                <!-- <a href="#!"><i class="fab fa-instagram fa-2x"></i></a> -->
+                <a href="#!"><i class="fab fa-github fa-3x"></i></a>
+                <a href="#!"><i class="fab fa-gitlab fa-3x"></i></a>
+            </div>
+        </section>
+        <section id="sl-projects">
+            <div class="__san_profile_wrap">
+                <div id="__san_profile_ls" class="__san_profile_ls">
+                     <span>Project</span>
+                </div>
+                <div id="__san_profile_rs" class="__san_profile_rs">
+                    <div>
+                      <h2>Project 1</h2>
+                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium hic praesentium deleniti commodi repudiandae nostrum laboriosam temporibus quidem, dolorem aliquid. Reprehenderit voluptate earum impedit laudantium perspiciatis. Suscipit dignissimos harum qui, consectetur sed explicabo accusamus facilis officiis exercitationem odio molestias voluptas praesentium deserunt cum at ipsa corporis, veritatis nobis ut odit.</p>
+                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium hic praesentium deleniti commodi repudiandae nostrum laboriosam temporibus quidem, dolorem aliquid. Reprehenderit voluptate earum impedit laudantium perspiciatis. Suscipit dignissimos harum qui, consectetur sed explicabo accusamus facilis officiis exercitationem odio molestias voluptas praesentium deserunt cum at ipsa corporis, veritatis nobis ut odit.</p>
+                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium hic praesentium deleniti commodi repudiandae nostrum laboriosam temporibus quidem, dolorem aliquid. Reprehenderit voluptate earum impedit laudantium perspiciatis. Suscipit dignissimos harum qui, consectetur sed explicabo accusamus facilis officiis exercitationem odio molestias voluptas praesentium deserunt cum at ipsa corporis, veritatis nobis ut odit.</p>
+                    </div>
+                    <div>
+                      <h2>Project 2</h2>
+                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium hic praesentium deleniti commodi repudiandae nostrum laboriosam temporibus quidem, dolorem aliquid. Reprehenderit voluptate earum impedit laudantium perspiciatis. Suscipit dignissimos harum qui, consectetur sed explicabo accusamus facilis officiis exercitationem odio molestias voluptas praesentium deserunt cum at ipsa corporis, veritatis nobis ut odit.</p>
+                    </div>
+                    <div>
+                      <h2>Project 3</h2>
+                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium hic praesentium deleniti commodi repudiandae nostrum laboriosam temporibus quidem, dolorem aliquid. Reprehenderit voluptate earum impedit laudantium perspiciatis. Suscipit dignissimos harum qui, consectetur sed explicabo accusamus facilis officiis exercitationem odio molestias voluptas praesentium deserunt cum at ipsa corporis, veritatis nobis ut odit.</p>
+                    </div>
+                </div>
+              </div>
+        </section>
+        <section id="sl-skills" >
+            <div class="sl-skills-heading">
+                <span>Skills/Tools/</span>
+            </div>
+            <div class="sl-skills-list">    
+                <div class="sl-skills-count">
+                    <span>HTML 5</span>
+                </div>
+                <div class="sl-skills-count">
+                    <span>CSS 3</span>
+                </div>
+                <div class="sl-skills-count">
+                    <span>Bootstrap</span>
+                </div>
+                <div class="sl-skills-count">
+                    <span>Javascript/Jquery</span>
+                </div>
+                <div class="sl-skills-count">
+                    <span>PHP</span>
+                </div>
+                <div class="sl-skills-count">
+                    <span>Github/Gitlab</span>
+                </div>
+                <div class="sl-skills-count">
+                    <span>Photoshop/Illustrator</span>
+                </div>
+                <div class="sl-skills-count">
+                    <span>Slack</span>
+                </div>
+                <div class="sl-skills-count">
+                    <span>Trello</span>
+                </div>
+                <div class="sl-skills-count">
+                    <span>Laravel</span>
+                </div>
+                <div class="sl-skills-count">
+                    <span>Vue.js</span>
+                </div>
+            </div>
+        </section>
+        <section id="sl-contact-from">
+            <div class="sl-contact-heading">
+                <span>Contact</span>
+            </div>
+            <div class="sl-form-wrap">
+                <form>
+                    <div class="form-list-wrap">
+                        <label for="sl-name">Enter Name</label>
+                        <input type="text" id="sl-name" placeholder="Your Name"/>
+                    </div>
+                    <div class="form-list-wrap">
+                        <label for="sl-email">Enter Email</label>
+                        <input type="text" id="sl-email" placeholder="Your Name"/>
+                    </div>
+                    <div class="form-list-wrap">
+                        <label for="sl-form-message">Message</label>
+                        <textarea id="sl-form-message" name="w3review" rows="4" cols="50"></textarea>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <section class="sl-footer">
+            <span>Copyright © 2019 santoshLama</span>
+        </section>
+        <div class="sl-go-up" onclick="topFunction()" id="sl-go-up">
+            <i class="fas fa-chevron-circle-up"></i>
+        </div>
+   </main>
+
+   <script src="js/menu.js"></script>
 </body>
 </html>
