--- a/project/index.html
+++ b/project/index.html
@@ -32,16 +32,20 @@
                 </ul>
             </nav>
         </header>
-        <section id="sl-profile">
-            <h2 class="sl-name">Santosh Lama</h2>
-            <h3 class="sl-work">Web Developer, Font End Developer, Laravel Developer, Programmer</h2>
-            <h3>Check Out My Github Accounts</h3>
-            <div class="sl-icons">
-                <!-- <a href="#!"><i class="fab fa-instagram fa-2x"></i></a> -->
-                <a href="#!"><i class="fab fa-github fa-3x"></i></a>
-                <a href="#!"><i class="fab fa-gitlab fa-3x"></i></a>
+        <div id="sl-background">
+            <div class="sl-bg-computer"></div>
+            <div class="sl-bg-cofee"></div>
+            <div id="sl-profile">
+                <h2 class="sl-name">Santosh Lama</h2>
+                <p class="sl-work">Web Developer, Font End Developer, Laravel Developer, Programmer</p>
+                <h3>Check Out My Github Accounts</h3>
+                <div class="sl-icons">
+                    <!-- <a href="#!"><i class="fab fa-instagram fa-2x"></i></a> -->
+                    <a href="#!"><i class="fab fa-github fa-3x"></i></a>
+                    <a href="#!"><i class="fab fa-gitlab fa-3x"></i></a>
+                </div>
             </div>
-        </section>
+        </div>
         <section id="sl-projects">
             <div class="__san_profile_wrap">
                 <div id="__san_profile_ls" class="__san_profile_ls">
@@ -133,7 +137,7 @@
             <i class="fas fa-chevron-circle-up"></i>
         </div>
    </main>
-
+   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
    <script src="js/menu.js"></script>
 </body>
 </html>
