make the conteact and skills section more viewable

--- a/project/index.html
+++ b/project/index.html
@@ -18,17 +18,18 @@
             <nav class="navbar hide">
                 <ul>
                     <li class="sl-nav-item">
-                        <a href="#" class="sl-nav-link">My profile</a>
+                        <a href="#sl-background" class="sl-nav-link">About me</a>
                     </li>
                     <li class="sl-nav-item">
-                        <a href="#" class="sl-nav-link">My work</a>
+                        <a href="#sl-projects" class="sl-nav-link">My projects</a>
                     </li>
                     <li class="sl-nav-item">
-                        <a href="#" class="sl-nav-link">Skills</a>
+                        <a href="#sl-skills" class="sl-nav-link">skills</a>
                     </li>
                     <li class="sl-nav-item">
-                        <a href="#" class="sl-nav-link">contacts</a>
+                        <a href="#sl-contact-form" class="sl-nav-link">contacts</a>
                     </li>
+
                 </ul>
             </nav>
         </header>
@@ -47,74 +48,107 @@
             </div>
         </div>
         <section id="sl-projects">
-            <div class="__san_profile_wrap">
-                <div id="__san_profile_ls" class="__san_profile_ls">
-                     <span>Project</span>
+            <div class="__san_project_wrap">
+                <div id="__san_project_ls" class="__san_project_ls">
+                     <span>Projects</span>
                 </div>
-                <div id="__san_profile_rs" class="__san_profile_rs">
-                    <div>
-                      <h2>Project 1</h2>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium hic praesentium deleniti commodi repudiandae nostrum laboriosam temporibus quidem, dolorem aliquid. Reprehenderit voluptate earum impedit laudantium perspiciatis. Suscipit dignissimos harum qui, consectetur sed explicabo accusamus facilis officiis exercitationem odio molestias voluptas praesentium deserunt cum at ipsa corporis, veritatis nobis ut odit.</p>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium hic praesentium deleniti commodi repudiandae nostrum laboriosam temporibus quidem, dolorem aliquid. Reprehenderit voluptate earum impedit laudantium perspiciatis. Suscipit dignissimos harum qui, consectetur sed explicabo accusamus facilis officiis exercitationem odio molestias voluptas praesentium deserunt cum at ipsa corporis, veritatis nobis ut odit.</p>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium hic praesentium deleniti commodi repudiandae nostrum laboriosam temporibus quidem, dolorem aliquid. Reprehenderit voluptate earum impedit laudantium perspiciatis. Suscipit dignissimos harum qui, consectetur sed explicabo accusamus facilis officiis exercitationem odio molestias voluptas praesentium deserunt cum at ipsa corporis, veritatis nobis ut odit.</p>
+                <div id="__san_project_rs" class="__san_project_rs">
+                    <div class="__san_project">
+                      <h2>Mero Discount</h2>
+                      <div class="__san_project_item">
+                          <img src="./images/meroDiscount.png"/>
+                          <div class="__san_project_btn">
+                              <a href="http://merodiscount.com/"><span class="button">visit website</span></a>
+                          </div>
+                      </div>
+                      <div class="__san_project_points">
+                        <h3>MY WORK</h3>
+                        <ul>
+                            <li>Build the website front end using HTML, CSS, and JS</li>
+                            <li>Plugin(Owl Carousel) is used</li>
+                        </ul>
                     </div>
-                    <div>
-                      <h2>Project 2</h2>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium hic praesentium deleniti commodi repudiandae nostrum laboriosam temporibus quidem, dolorem aliquid. Reprehenderit voluptate earum impedit laudantium perspiciatis. Suscipit dignissimos harum qui, consectetur sed explicabo accusamus facilis officiis exercitationem odio molestias voluptas praesentium deserunt cum at ipsa corporis, veritatis nobis ut odit.</p>
                     </div>
-                    <div>
-                      <h2>Project 3</h2>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium hic praesentium deleniti commodi repudiandae nostrum laboriosam temporibus quidem, dolorem aliquid. Reprehenderit voluptate earum impedit laudantium perspiciatis. Suscipit dignissimos harum qui, consectetur sed explicabo accusamus facilis officiis exercitationem odio molestias voluptas praesentium deserunt cum at ipsa corporis, veritatis nobis ut odit.</p>
+                    <div class="__san_project">
+                        <h2>Personal Website</h2>
+                        <div class="__san_project_item">
+                            <img src="./images/personalWebsite.png">
+                            <div class="__san_project_btn">
+                                <a href="http://merodiscount.com/"><span class="button">visit website</span></a>
+                            </div>
+                        </div>
+                        <div class="__san_project_points">
+                          <h3>MY WORK</h3>
+                          <ul>
+                              <li>Build the website front end using HTML, CSS, and JS</li>
+                              <li>Plugin(Owl Carousel) is used</li>
+                          </ul>
+                      </div>
                     </div>
                 </div>
               </div>
         </section>
         <section id="sl-skills" >
             <div class="sl-skills-heading">
-                <span>Skills/Tools/</span>
+                <span>SKILLS/TOOLS</span>
             </div>
             <div class="sl-skills-list">    
                 <div class="sl-skills-count">
+                    <span><i class="fab fa-3x fa-html5"></i></span>
                     <span>HTML 5</span>
                 </div>
                 <div class="sl-skills-count">
+                    <span><i class="fab fa-3x fa-css3-alt"></i></span>
                     <span>CSS 3</span>
                 </div>
                 <div class="sl-skills-count">
+                    <span><i class="fab fa-3x fa-bootstrap"></i></span>
                     <span>Bootstrap</span>
                 </div>
                 <div class="sl-skills-count">
+                    <span><i class="fab fa-3x fa-js-square"></i></span>
                     <span>Javascript/Jquery</span>
                 </div>
                 <div class="sl-skills-count">
+                    <span><i class="fab fa-3x fa-php"></i></span>
                     <span>PHP</span>
                 </div>
                 <div class="sl-skills-count">
-                    <span>Github/Gitlab</span>
+                    <span><i class="fab fa-3x fa-github"></i></span>
+                    <span>Github</span>
                 </div>
                 <div class="sl-skills-count">
+                    <span><i class="fab fa-3x fa-gitlab"></i></i></span>
+                    <span>Gitlab</span>
+                </div>
+                <div class="sl-skills-count">
+                    <span><i class="fas fa-3x fa-camera-retro"></i></span>
                     <span>Photoshop/Illustrator</span>
                 </div>
                 <div class="sl-skills-count">
+                    <span><i class="fab fa-3x fa-slack"></i></span>
                     <span>Slack</span>
                 </div>
                 <div class="sl-skills-count">
+                    <span><i class="fab fa-3x fa-trello"></i></span>
                     <span>Trello</span>
                 </div>
                 <div class="sl-skills-count">
+                    <span><i class="fab fa-3x fa-laravel"></i></span>
                     <span>Laravel</span>
                 </div>
                 <div class="sl-skills-count">
+                    <span><i class="fab fa-3x fa-vuejs"></i></span>
                     <span>Vue.js</span>
                 </div>
             </div>
         </section>
-        <section id="sl-contact-from">
+        <section id="sl-contact-form">
             <div class="sl-contact-heading">
                 <span>Contact</span>
             </div>
             <div class="sl-form-wrap">
-                <form>
+                <form name="contact" method="POST" data-netlify="true">
                     <div class="form-list-wrap">
                         <label for="sl-name">Enter Name</label>
                         <input type="text" id="sl-name" placeholder="Your Name"/>
@@ -127,13 +161,16 @@
                         <label for="sl-form-message">Message</label>
                         <textarea id="sl-form-message" name="w3review" rows="4" cols="50"></textarea>
                     </div>
+                    <div class="form-list-button">
+                        <button type="submit">Submit</button>
+                    </div>
                 </form>
             </div>
         </section>
         <section class="sl-footer">
-            <span>Copyright © 2019 santoshLama</span>
+            <span>Copyright © 2020 santoshLama</span>
         </section>
-        <div class="sl-go-up" onclick="topFunction()" id="sl-go-up">
+        <div class="sl-go-up" id="sl-go-up">
             <i class="fas fa-chevron-circle-up"></i>
         </div>
    </main>
