--- a/project/index.html
+++ b/project/index.html
@@ -145,7 +145,7 @@
         </section>
         <section id="sl-contact-form">
             <div class="sl-contact-heading">
-                <span>Contact</span>
+                <span>CONTACT</span>
             </div>
             <div class="sl-form-wrap">
                 <form name="contact" method="POST" data-netlify="true">
