small change made

--- a/project/index.html
+++ b/project/index.html
@@ -42,8 +42,8 @@
                 <h3>Check Out My Github Accounts</h3>
                 <div class="sl-icons">
                     <!-- <a href="#!"><i class="fab fa-instagram fa-2x"></i></a> -->
-                    <a href="#!"><i class="fab fa-github fa-3x"></i></a>
-                    <a href="#!"><i class="fab fa-gitlab fa-3x"></i></a>
+                    <a href="https://github.com/SantoshDong"><i class="fab fa-github fa-3x"></i></a>
+                    <a href="https://gitlab.com/santoshlama"><i class="fab fa-gitlab fa-3x"></i></a>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
                         <div class="__san_project_item">
                             <img src="./images/personalWebsite.png">
                             <div class="__san_project_btn">
-                                <a href="http://merodiscount.com/"><span class="button">visit website</span></a>
+                                <a href="http://santoshlama.herokuapp.com"><span class="button">visit website</span></a>
                             </div>
                         </div>
                         <div class="__san_project_points">
