--- a/project/index.html
+++ b/project/index.html
@@ -148,7 +148,7 @@
                 <span>CONTACT</span>
             </div>
             <div class="sl-form-wrap">
-                <form name="contact" method="POST" data-netlify="true">
+                <form name="contact">
                     <div class="form-list-wrap">
                         <label for="sl-name">Enter Name</label>
                         <input type="text" id="sl-name" placeholder="Your Name"/>
