--- a/project/index.html
+++ b/project/index.html
@@ -66,6 +66,7 @@
                         <ul>
                             <li>Build the website front end using HTML, CSS, and JS</li>
                             <li>Plugin(Owl Carousel) is used</li>
+                            <li>Fully responsive</li>
                         </ul>
                     </div>
                     </div>
@@ -80,8 +81,8 @@
                         <div class="__san_project_points">
                           <h3>MY WORK</h3>
                           <ul>
-                              <li>Build the website front end using HTML, CSS, and JS</li>
-                              <li>Plugin(Owl Carousel) is used</li>
+                              <li>Build the website front end using HTML, CSS, Js, Bootstrap</li>
+                              <li>Fully Responsive</li>
                           </ul>
                       </div>
                     </div>
@@ -147,25 +148,42 @@
             <div class="sl-contact-heading">
                 <span>CONTACT</span>
             </div>
-            <div class="sl-form-wrap">
-                <form name="contact">
-                    <div class="form-list-wrap">
-                        <label for="sl-name">Enter Name</label>
-                        <input type="text" id="sl-name" placeholder="Your Name"/>
+           <div class="sl-form-whole">
+                <div class="sl-form-wrap">
+                    <form name="contact">
+                        <div class="form-list-wrap">
+                            <label for="sl-name">Enter Name</label>
+                            <input type="text" id="sl-name" placeholder="Your Name"/>
+                        </div>
+                        <div class="form-list-wrap">
+                            <label for="sl-email">Enter Email</label>
+                            <input type="text" id="sl-email" placeholder="Your Name"/>
+                        </div>
+                        <div class="form-list-wrap">
+                            <label for="sl-form-message">Message</label>
+                            <textarea id="sl-form-message" name="w3review" rows="4" cols="50"></textarea>
+                        </div>
+                        <div class="form-list-button">
+                            <button type="submit">Submit</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="sl-connect">
+                    <div class="sl-connect-heading">
+                        <span>Get in Touch</span>
                     </div>
-                    <div class="form-list-wrap">
-                        <label for="sl-email">Enter Email</label>
-                        <input type="text" id="sl-email" placeholder="Your Name"/>
+                    <div class="sl-connect-items">
+                        <ul>
+                            <li>
+                                <a href=""><span><i class="far fa-envelope fa-fw"></i>suntoshvhajuu@gmail.com</span></a>
+                            </li>
+                            <li>
+                                <a href=""><span><i class="fab fa-instagram fa-fw"></i>Instagram</span></a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="form-list-wrap">
-                        <label for="sl-form-message">Message</label>
-                        <textarea id="sl-form-message" name="w3review" rows="4" cols="50"></textarea>
-                    </div>
-                    <div class="form-list-button">
-                        <button type="submit">Submit</button>
-                    </div>
-                </form>
-            </div>
+                </div>
+           </div>
         </section>
         <section class="sl-footer">
             <span>Copyright © 2020 santoshLama</span>
