--- a/project/index.html
+++ b/project/index.html
@@ -167,7 +167,8 @@
                             <input type="submit" value="SEND" value="submit" />
                         </div>
                     </form> -->
-                    <form method="POST" onsubmit="validate()" action="https://formspree.io/santoshvhajuu@gmail.com">
+                    <form method="POST"   action="https://formspree.io/f/xrgorqrr"
+                    method="POST">
                         <div class="div1-sa">
                           <div class="first1_div">
                             <h4>FULL NAME<h4>
@@ -201,7 +202,7 @@
                               name="message" required></textarea></div>
                         </div>
                         <div style="text-align:center;padding-top:10px;">
-                          <input type="submit" value="SEND" />
+                          <button type="submit" />Submit</button>
                         </div>
                       </form>
                 </div>
