--- a/project/index.html
+++ b/project/index.html
@@ -167,7 +167,7 @@
                             <input type="submit" value="SEND" value="submit" />
                         </div>
                     </form> -->
-                    <form method="POST"   action="https://formspree.io/f/xrgorqrr"
+                    <form method="POST"   action="https://formspree.io/f/santoshvhajuu@gmail.com"
                     method="POST">
                         <div class="div1-sa">
                           <div class="first1_div">
