--- a/project/index.html
+++ b/project/index.html
@@ -167,8 +167,7 @@
                             <input type="submit" value="SEND" value="submit" />
                         </div>
                     </form> -->
-                    <form method="POST"   action="https://formspree.io/f/santoshvhajuu@gmail.com"
-                    method="POST">
+                    <form method="POST"  action="https://formspree.io/f/xrgorqrr">
                         <div class="div1-sa">
                           <div class="first1_div">
                             <h4>FULL NAME<h4>
