--- a/project/index.html
+++ b/project/index.html
@@ -149,61 +149,24 @@
                 <span>CONTACT</span>
             </div>
            <div class="sl-form-whole">
-                <div class="sl-form-wra">
-                    <!-- <form method="POST" onsubmit="validate()" action="https://formspree.io/santoshvhajuu@gmail.com">
+                <div class="sl-form-wrap">
+                    <form name="contact"  action="https://formspree.io/f/xrgorqrr" method="POST">
                         <div class="form-list-wrap">
                             <label for="sl-name">Enter Name</label>
-                            <input type="text" name="name" id="sl-name" placeholder="Your Name" required/>
+                            <input type="text" id="sl-name" placeholder="Your Name"/>
                         </div>
                         <div class="form-list-wrap">
                             <label for="sl-email">Enter Email</label>
-                            <input type="text" name="email" id="sl-email" placeholder="Your Name" required/>
+                            <input type="text" id="sl-email" placeholder="Your Name"/>
                         </div>
                         <div class="form-list-wrap">
                             <label for="sl-form-message">Message</label>
-                            <textarea id="sl-form-message" name="message" name="w3review" rows="4" cols="50" required></textarea>
+                            <textarea id="sl-form-message" name="w3review" rows="4" cols="50"></textarea>
                         </div>
                         <div class="form-list-button">
-                            <input type="submit" value="SEND" value="submit" />
+                            <button type="submit">Submit</button>
                         </div>
-                    </form> -->
-                    <form method="POST"  action="https://formspree.io/f/xrgorqrr">
-                        <div class="div1-sa">
-                          <div class="first1_div">
-                            <h4>FULL NAME<h4>
-                          </div>
-                          <div class="second2_div"><input id="name" name="name" type="text" class="name" pattern="[A-Za-z]+$" title="please enter a valid Name" required /></div>
-                        </div>
-                        <div class="div1-sa">
-                          <div class="first1_div">
-                            <h4 style="text-align:center;">EMAIL</h4>
-                          </div>
-                          <div class="second2_div"><input id="email" name="email" type="email" class="email" required /></div>
-                        </div>
-                        <div class="div1-sa">
-                          <div class="first1_div">
-                            <h4 style="text-align:center;">ADDRESS</h4>
-                          </div>
-                          <div class="second2_div"><input id="address" type="text" name="address"  required /></div>
-                        </div>
-                        <div class="div1-sa">
-                          <div class="first1_div">
-                            <h4 style="text-align:center;">MOBILE</h4>
-                          </div>
-                          <div class="second2_div"><input type="tel" id="phone" name="phone" pattern="[0-9]{10}"
-                              title="please enter 10 number" required /></div>
-                        </div>
-                        <div class="div1-sa">
-                          <div class="first1_div">
-                            <h4 style="text-align:center;">MESSAGE</h4>
-                          </div>
-                          <div class="second2_div"><textarea id="message" rows="4" cols="50" id="message"
-                              name="message" required></textarea></div>
-                        </div>
-                        <div style="text-align:center;padding-top:10px;">
-                          <button type="submit" />Submit</button>
-                        </div>
-                      </form>
+                    </form>
                 </div>
                 <div class="sl-connect">
                     <div class="sl-connect-heading">
@@ -215,7 +178,7 @@
                                 <a href=""><span><i class="far fa-envelope fa-fw"></i>suntoshvhajuu@gmail.com</span></a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/santoshvhajuu2018/"><span><i class="fab fa-instagram fa-fw"></i>Instagram</span></a>
+                                <a href=""><span><i class="fab fa-instagram fa-fw"></i>Instagram</span></a>
                             </li>
                         </ul>
                     </div>
