New change made

--- a/project/index.html
+++ b/project/index.html
@@ -54,6 +54,23 @@
                 </div>
                 <div id="__san_project_rs" class="__san_project_rs">
                     <div class="__san_project">
+                        <h2>Saral Shikshya</h2>
+                        <div class="__san_project_item">
+                            <img src="./images/saral.png">
+                            <div class="__san_project_btn">
+                                <a href="https://saralshikshya.com/"><span class="button">visit website</span></a>
+                            </div>
+                        </div>
+                        <div class="__san_project_points">
+                          <h3>MY WORK</h3>
+                          <ul>
+                              <li>Build in Laravel</li>
+                              <li>Using different front end tools HTML, CSS, Js, JQUERY, Bootstrap</li>
+                              <li>Fully Responsive</li>
+                          </ul>
+                      </div>
+                    </div>
+                    <div class="__san_project">
                       <h2>Mero Discount</h2>
                       <div class="__san_project_item">
                           <img src="./images/meroDiscount.png"/>
