add target link

--- a/project/index.html
+++ b/project/index.html
@@ -42,8 +42,8 @@
                 <h3>Check Out My Github Accounts</h3>
                 <div class="sl-icons">
                     <!-- <a href="#!"><i class="fab fa-instagram fa-2x"></i></a> -->
-                    <a href="https://github.com/SantoshDong"><i class="fab fa-github fa-3x"></i></a>
-                    <a href="https://gitlab.com/santoshlama"><i class="fab fa-gitlab fa-3x"></i></a>
+                    <a href="https://github.com/SantoshDong" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+                    <a href="https://gitlab.com/santoshlama" target="_blank"><i class="fab fa-gitlab fa-3x"></i></a>
                 </div>
             </div>
         </div>
@@ -192,10 +192,10 @@
                     <div class="sl-connect-items">
                         <ul>
                             <li>
-                                <a href=""><span><i class="far fa-envelope fa-fw"></i>suntoshvhajuu@gmail.com</span></a>
+                                <a href="gmail.com" target="_blank"><span><i class="far fa-envelope fa-fw"></i>suntoshvhajuu@gmail.com</span></a>
                             </li>
                             <li>
-                                <a href=""><span><i class="fab fa-instagram fa-fw"></i>Instagram</span></a>
+                                <a href="https://www.instagram.com/santoshvhajuu2018/" target="_blank"><span><i class="fab fa-instagram fa-fw"></i>Instagram</span></a>
                             </li>
                         </ul>
                     </div>
