small change in a

--- a/project/index.html
+++ b/project/index.html
@@ -58,7 +58,7 @@
                         <div class="__san_project_item">
                             <img src="./images/saral.png">
                             <div class="__san_project_btn">
-                                <a href="https://saralshikshya.com/"><span class="button">visit website</span></a>
+                                <a href="https://saralshikshya.com/" target="_blank"><span class="button">visit website</span></a>
                             </div>
                         </div>
                         <div class="__san_project_points">
@@ -75,7 +75,7 @@
                       <div class="__san_project_item">
                           <img src="./images/meroDiscount.png"/>
                           <div class="__san_project_btn">
-                              <a href="http://merodiscount.com/"><span class="button">visit website</span></a>
+                              <a href="http://merodiscount.com/" target="_blank"><span class="button">visit website</span></a>
                           </div>
                       </div>
                       <div class="__san_project_points">
@@ -92,7 +92,7 @@
                         <div class="__san_project_item">
                             <img src="./images/personalWebsite.png">
                             <div class="__san_project_btn">
-                                <a href="http://santoshlama.herokuapp.com"><span class="button">visit website</span></a>
+                                <a href="http://santoshlama.herokuapp.com" target="_blank"><span class="button">visit website</span></a>
                             </div>
                         </div>
                         <div class="__san_project_points">
